--- a/aio/package.json
+++ b/aio/package.json
@@ -12,7 +12,7 @@
     "aio-use-npm": "node tools/ng-packages-installer restore .",
     "aio-check-local": "node tools/ng-packages-installer check .",
     "ng": "yarn check-env && ng",
-    "start": "yarn check-env && ng serve --configuration=fast",
+    "start": "yarn check-env && ng serve --configuration=fast --port=4201",
     "preview": "http-server-spa ./dist index.html 4200",
     "prebuild": "yarn setup",
     "build": "yarn ~~build",
